syntax = "proto3";
package Data;
message ClientConfigResponse {
	message ClientConfigItem {
		optional int32 clientConfigId = 1;
		optional string name = 2;
		optional string value = 3;
	}
	repeated .Data.ClientConfigResponse.ClientConfigItem items = 2;
}
