syntax = "proto3";
package Data;
import "LandData.proto";
import "Error.proto";
message GetFriendDataRequest {
	repeated string friendId = 1;
}
message GetFriendDataResponse {
	message FriendDataPair {
		enum AuthService {
			NUCLEUS = 0;
			FACEBOOK = 1;
		}
		message FriendDataError {
			optional int32 code = 1;
			optional string type = 2;
		}
		optional string friendId = 1;
		optional .Data.LandMessage.FriendData friendData = 2;
		optional .Data.GetFriendDataResponse.FriendDataPair.FriendDataError error = 3;
		optional .Data.GetFriendDataResponse.FriendDataPair.AuthService authService = 4;
		optional string externalId = 5;
	}
	repeated .Data.GetFriendDataResponse.FriendDataPair friendData = 1;
	optional .Data.ErrorMessage error = 2;
}
